cargo-features = ["edition2024"]

[package]
name = "escrow_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build" , "anchor-spl/idl-build"] 


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "3.0.0"
